Fixed gap at bottom of img.

--- a/resources/styles/contact.css
+++ b/resources/styles/contact.css
@@ -69,6 +69,7 @@ img {
   width: 100%;
   height: auto;
   text-align: center;
+  vertical-align: bottom;
 }
 
 #text {
